# smart-insights-agent

./: .gitignore  CLAUDE.md  PROMPTS.md  README.md  SPEC.md  pyproject.toml  skills-lock.json
.claude/: settings.json
data/: enriched.json  segment_map.json
docs/assignment/: OptinMonster_Dataset.json  brief.md
docs/deliverables/developer-notes/: building-with-ai.md
docs/deliverables/loom-walkthrough/: solution-walkthrough.md
docs/deliverables/misc/: my-words.md
docs/deliverables/my-ai-log/: agentic-engineering-review.md
examples/: sample_insights.json
smart_insights/: __init__.py  __main__.py  audit.py  benchmark.py  insights.py  models.py  normalize.py  preprocess.py  progress.py  report.py  text.py  validate.py
tests/: conftest.py  test_audit.py  test_benchmark.py  test_insights.py  test_main.py  test_models.py  test_normalize.py  test_preprocess.py  test_progress.py  test_text.py  test_validate.py
