[project]
name = "smart-insights"
version = "0.1.0"
description = "OptinMonster smart-insights micro-agent: clean, benchmark, and recommend"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["smart_insights"]

[tool.pytest.ini_options]
testpaths = ["tests"]
