[project]
name = "smart-insights-agent"
version = "0.1.0"
description = "Smart Insights Agent: clean, benchmark, and recommend over OptinMonster customers' opt-in campaign data"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "mypy>=1.11", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["smart_insights"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests import their own helpers (`from tests.conftest import ...`), so the repo
# root must be importable regardless of how the package itself was installed.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
files = ["smart_insights", "tests"]
strict = true
warn_unused_configs = true
mypy_path = "."
explicit_package_bases = true

# Tests are still type-checked; they just need not annotate every fixture param.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
